test.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: default
  labels:
    com.docker.service.id: atsea-web
    com.docker.service.name: web
    com.docker.stack.namespace: atsea
spec:
    replicas: 1
    selector:
      matchLabels:
        com.docker.service.id: atsea-web
        com.docker.service.name: web
        com.docker.stack.namespace: atsea
    template:
      metadata:
        labels:
          com.docker.service.id: atsea-web
          com.docker.service.name: web
          com.docker.stack.namespace: atsea          
      spec:
        containers:
        - image: atsea_web
          name: web
          imagePullPolicy: Never
          ports:
          - containerPort: 5000
            protocol: TCP
        restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apiVersion
  namespace: default
  labels:
    com.docker.service.id: atsea-api
    com.docker.service.name: api
    com.docker.stack.namespace: atsea
spec:
    replicas: 1
    selector:
      matchLabels:
        com.docker.service.id: atsea-api
        com.docker.service.name: api
        com.docker.stack.namespace: atsea
    template:
      metadata:
        labels:
          com.docker.service.id: atsea-api
          com.docker.service.name: api
          com.docker.stack.namespace: atsea          
      spec:
        containers:
        - image: atsea_api
          name: api
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
            protocol: TCP
        restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    com.docker.service.id: atsea-db
    com.docker.service.name: db
    com.docker.stack.namespace: atsea
  name: db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      com.docker.service.id: atsea-db
      com.docker.service.name: db
      com.docker.stack.namespace: atsea
  template:
    metadata:
      labels:
        com.docker.service.id: atsea-db
        com.docker.service.name: db
        com.docker.stack.namespace: atsea
    spec:
      containers:
      - 
        image: atsea_db
        imagePullPolicy: Never
        name: database
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - mountPath: /run/secrets/postgres-password
          name: secret-0
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: secret-0
        secret:
          # defaultMode: 420
          # items:
          # - key: C:\demo\atsea\devsecrets\postgres_password
          #   path: secret-0
          secretName: postgres-password
---
apiVersion: v1
kind: Service
metadata:
  labels:
    com.docker.service.id: atsea-db
    com.docker.service.name: db
    com.docker.stack.namespace: atsea
  name: db
  namespace: default
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    com.docker.service.id: atsea-db
    com.docker.service.name: db
    com.docker.stack.namespace: atsea
---
apiVersion: v1
kind: Service
metadata:
  labels:
    com.docker.service.id: atsea-api
    com.docker.service.name: api
    com.docker.stack.namespace: atsea
  name: api
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    com.docker.service.id: atsea-api
    com.docker.service.name: api
    com.docker.stack.namespace: atsea
---
apiVersion: v1
kind: Service
metadata:
  labels:
    com.docker.service.id: atsea-web
    com.docker.service.name: web
    com.docker.stack.namespace: atsea
  name: web
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    nodePort: 30080
  selector:
    com.docker.service.id: atsea-web
    com.docker.service.name: web
    com.docker.stack.namespace: atsea
  type: NodePort
